lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:12: error: type mismatch;
 found   : (Double, Double)
 required: lessons.lander.universe.Point
	return  Segment ((0.1, 5.1),(2.1,5.7))
                         ^